25장 클래스 수정

--- a/25장-클래스/25.7.md
+++ b/25장-클래스/25.7.md
@@ -66,7 +66,7 @@ ex) 자바의 클래스
 클래스 필드를 변수처럼 클래스 몸체에 this 없이 선언  
 this를 생략해도 클래스 필드 참조 가능
 
-자바스크립트에서도 인스턴스 프로퍼티를 클래스 기반 객체지향 언어의 클래스 필드처럼 정의할 수 있는 새로운 표준 사양
+자바스크립트에서도 인스턴스 프로퍼티를 클래스 기반 객체지향 언어의 클래스 필드처럼 정의할 수 있는 새로운 표준 사양인 'Class field declarations'가 등장함 
 
 클래스 필드를 **정의**하는 경우, this에 클래스 필드를 바인딩하면 안됨
 
@@ -291,7 +291,7 @@ console.log(derived); // Derived {a: 1, b: 2, c: 3}
     }
 
     const derived = new Derived('Kim');
-    console.log(derived.sayHi());
+    console.log(derived.sayHi()); // Hi! Kim What's up!
     ```
 2. 서브클래스의 정적 메서드 내에서 super.sayHi는 수퍼클래스의 정적 메서드 sayHi를 가리킨다. 
     ```js
